--- a/frontendMentor/newsletter-sign-up-with-success-message-main/css/style.css
+++ b/frontendMentor/newsletter-sign-up-with-success-message-main/css/style.css
@@ -256,7 +256,10 @@ body {
     min-width: 100%;
     display: flex;
     flex-direction: column-reverse;
-    border-radius: 16px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
   }
 
   .form-info .title {
